# protoconf

./: .gitignore  README.rst  conanfile.py
src/: CMakeLists.txt  ProtoconfConfig.h.in
src/Example/: CMakeLists.txt
src/Example/include/: Logger  Schema
src/Example/src/: ProtoconfTests.cpp
src/Protoconf/: CMakeLists.txt
src/Protoconf/include/: module.h  protoconf.h
src/Protoconf/src/: module.cpp
src/Schema/: CMakeLists.txt
src/Schema/src/: schema.proto
src/Tests/: CMakeLists.txt
src/Tests/include/: GTestGroups.h
src/Tests/src/: ModuleTests.cpp  ProtoconfTests.cpp
src/include/: Protoconf
src/includex/Protoconf/: module.h  protoconf.h
